# GFDL-VortexTracker

./: .gitignore  CMakeLists.txt  README  README.md  cwaitfor.c  genesisdoc.md  gettrk_main.f  gettrk_modules.f  makefile  radiidoc.md  runtracker.sh
.github/workflows/: github_cmake_gnu.yml  github_runtests_gnu.yml
archived_vitals/: syndat_tcvitals.2002  syndat_tcvitals.2003  syndat_tcvitals.2004  syndat_tcvitals.2015  syndat_tcvitals.2016  syndat_tcvitals.2019  syndat_tcvitals.2021  syndat_tcvitals.2023  syndat_tcvitals.2025
code/: CMakeLists.txt  radiidoc.md
code/modulefile-setup/: analysis-setup.sh  analysisRHEL7-setup.sh  analysisRHEL8-setup.sh  gaea-setup.sh  gcc-setup.sh  hera-setup.sh  hercules-setup.sh  jet-setup.sh  orion-setup.sh  ppan-setup.sh  ursa-setup.sh  wcoss2-setup.sh
code/src/: debug-cmake.sh  machine-setup.sh  run-cmake.sh
code/src/support/: CMakeLists.txt
code/src/support/tave/: tave.f
code/src/support/vint/: vint.f
code/src/tracker/: CMakeLists.txt  cwaitfor.c  gettrk_main.f  gettrk_modules.f  gettrk_subroutines.f  module_waitfor.f
code/src/tracker/test_tracker/: test_avgcalc.F90  test_calccorr.F90  test_getcorr.F90  test_wtavrg.F90
compile/: CMakeLists.txt  compiletrkr.sh
compile/src_code/sup_src/: CMakeLists.txt
compile/src_code/sup_src/tave/: tave.f
compile/src_code/trkr_src/: CMakeLists.txt  gettrk_modules.f  gettrk_subroutines.f
compile/src_code/trkr_src/test_tracker/: test_wtavrg_lon.F90
compile/system-envs/gcc/: hera.sh  hercules.sh  orion.sh  ppan.sh  ursa.sh
compile/system-envs/intel/: gaea.sh  hera.sh  hercules.sh  orion.sh  ppan.sh  ursa.sh  wcoss2.sh
contrib/spack/gfdl-vortextracker/: package.py
docs/: UserGuide.md
files/vitals/: syndat_tcvitals.1997  syndat_tcvitals.2000  syndat_tcvitals.2001  syndat_tcvitals.2006  syndat_tcvitals.2008  syndat_tcvitals.2009  syndat_tcvitals.2011  syndat_tcvitals.2012  syndat_tcvitals.2013  syndat_tcvitals.2016.orig  syndat_tcvitals.2016.v1  syndat_tcvitals.2020  syndat_tcvitals.2022  syndat_tcvitals.2023  syndat_tcvitals.2024  tcvitals.tar
modulefile-setup/: hera-setup.sh  modulefile.wcoss2  modulefile.wcoss_dell_p3  orion-setup.sh  ppan-setup.sh
modulefiles/: modulefile.gaea  modulefile.hera  modulefile.jet  modulefile.orion  modulefile.ppan  modulefile.wcoss2  modulefile.wcoss_cray  modulefile.wcoss_dell_p3
run/: run_tracker.sh  runtracker.sh  tracker_leadtimes
run/docker/: use-docker.sh
run/grib/: run-grib.sh
run/grib/subscripts/: IOfiles_grib.sh  cleanup_grib.sh  compile_grib.sh  grib_env_vars.sh  multi_grib.sh  namelist_grib.sh  onebig_grib.sh  tcvitals_grib.sh
run/init_data/: example_file.txt
run/netcdf/: run-ncdf.sh
run/netcdf/subscripts/: IOfiles_ncdf.sh  cleanup_ncdf.sh  name_ncdfvars.sh  ncdf_env_vars.sh  tcvitals_ncdf.sh
run/scripts/grib/: grib_runtrkr.sh  setup_grib.sh
run/scripts/netcdf/: atmos_ncdfvars.sh  atmos_netcdfvars.sh  ncdf_runtrkr.sh  setup_ncdf.sh  setup_netcdf.sh
run/subscripts/: IOfiles.sh  grib_multi_fileseq.sh  grib_onebig_fileseq.sh  grib_single_fileseq.sh  grib_vars.sh  initrkr.sh  make_tcvitals.sh  ncdf_vars.sh  netcdf_vars.sh  runtrkr.sh  trkr_vars.sh
run/subscripts/archived_vitals/: syndat_tcvitals.1998  syndat_tcvitals.1999  syndat_tcvitals.2005  syndat_tcvitals.2007  syndat_tcvitals.2010  syndat_tcvitals.2014  syndat_tcvitals.2018
src/: build_all_cmake.sh  machine-setup.sh  run-cmake.sh
src/support/: CMakeLists.txt
src/support/supvit/: CMakeLists.txt
src/support/tave/: CMakeLists.txt
src/support/vint/: CMakeLists.txt  vint.f
src/tracker/: CMakeLists.txt  gettrk_main.f  gettrk_modules.f  gettrk_subroutines.f  makefile  module_waitfor.f
src/tracker/test_tracker/: test_avgcalc.F90  test_calc_vmag.F90  test_distbear.F90  test_get_sfc_center.F90  test_getcorr.F90  test_is_it_a_storm.F90  test_stdevcalc.F90
